fixed opencv build in Docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,6 +7,9 @@
 
 FROM nvcr.io/nvidia/tensorrt:23.09-py3
 
+ARG OPENCV_VERSION=4.8.1
+
+
 ENV TZ=Asia/Kolkata
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
@@ -30,3 +33,36 @@ RUN git clone https://github.com/jbeder/yaml-cpp.git \
     && make install
 
 RUN apt install libeigen3-dev libtbb-dev libboost-all-dev -y
+
+COPY ./assets/opencv-files/ /workspace/opencv-files/
+
+# Install OpenCV
+RUN cd /opt/ &&\
+    # Download and unzip OpenCV and opencv_contrib and delte zip files
+    wget https://github.com/opencv/opencv/archive/$OPENCV_VERSION.zip -O opencv-${OPENCV_VERSION}.zip &&\
+    unzip opencv-${OPENCV_VERSION}.zip &&\
+    rm opencv-${OPENCV_VERSION}.zip &&\
+    wget https://github.com/opencv/opencv_contrib/archive/$OPENCV_VERSION.zip -O opencv_contrib-${OPENCV_VERSION}.zip &&\
+    unzip opencv_contrib-${OPENCV_VERSION}.zip &&\
+    rm opencv_contrib-${OPENCV_VERSION}.zip &&\
+    # Create build folder and switch to it
+    mkdir -p /opt/opencv-${OPENCV_VERSION}/build && cd /opt/opencv-${OPENCV_VERSION}/build &&\
+    # Make changes to the OpenCV source files
+    cp -r /workspace/opencv-files/normalize_bbox.hpp /opt/opencv-${OPENCV_VERSION}/modules/dnn/src/cuda4dnn/primitives/normalize_bbox.hpp &&\
+    cp -r /workspace/opencv-files/region.hpp /opt/opencv-${OPENCV_VERSION}/modules/dnn/src/cuda4dnn/primitives/region.hpp &&\
+    # Cmake configure
+    cmake \
+        -DOPENCV_EXTRA_MODULES_PATH=/opt/opencv_contrib-${OPENCV_VERSION}/modules \
+        -DWITH_CUDA=ON \
+        -DCMAKE_BUILD_TYPE=RELEASE \
+        # Install path will be /usr/local/lib (lib is implicit)
+        -DCMAKE_INSTALL_PREFIX=/usr/local \
+        .. &&\
+    # Make
+    make -j"$(nproc)" && \
+    # Install to /usr/local/lib
+    make install && \
+    ldconfig 
+
+# Remove OpenCV sources and build folder
+# RUN rm -rf /opt/opencv-${OPENCV_VERSION} && rm -rf /opt/opencv_contrib-${OPENCV_VERSION}
